--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <title>Мои соцсети</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
-  <h1>Привет! Я — [Твоё имя]</h1>
-  <p>Следи за мной в соцсетях:</p>
-  <ul>
-    <li><a href="https://t.me/твой_канал" target="_blank">Telegram</a></li>
-    <li><a href="https://instagram.com/твой_профиль" target="_blank">Instagram</a></li>
-    <li><a href="https://youtube.com/твой_канал" target="_blank">YouTube</a></li>
-  </ul>
+<body class="body">
+    <!--=========Header==============================================================================-->            
+            <header >
+                <div class="header_container _container">
+                    <a href="https://www.tiktok.com/@endorf1in?is_from_webapp=1&sender_device=pc" class="header_logo " >
+                        ENDORF1IN
+                    </a> 
+                                     
+                    <nav >
+                         <a href="https://www.tiktok.com/@endorf1in?is_from_webapp=1&sender_device=pc" class="tiktok"><i class="fab fa-tiktok"></i></a>
+                    </nav>
+                </div>
+            </header>
+      <!--=========Showcase1==============================================================================-->
+<div class="_container">
+  <h1 class="h1_social">Cсылки на соц сети:</h1>
+    <div class="button-wrapper">
+        <ul class="button-list">
+            <li><a href="https://discord.gg/qShtZWXE" class="transparent-button"  target="_blank"><i class="fab fa-discord"></i>Discord</a></li>
+            <li><a href="https://t.me/endorf1in" class="transparent-button" target="_blank"><i class="fab fa-telegram"></i>Telegram</a></li>
+            <li><a href="https://www.twitch.tv/endorf1ln" class="transparent-button" target="_blank"><i class="fab fa-twitch"></i>Twitch</a></li>
+            <li><a href="" class="transparent-button" target="_blank"><i class="fas fa-hammer"></i>Minecraft сервер</a></li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
