--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Мои соцсети</title>
-  <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body class="body">
@@ -20,7 +20,7 @@
                 </div>
             </header>
       <!--=========Showcase1==============================================================================-->
-<div class="_container">
+<div class="_container showcase">
   <h1 class="h1_social">Cсылки на соц сети:</h1>
     <div class="button-wrapper">
         <ul class="button-list">
