--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!--=========Showcase1==============================================================================-->
 <div class="_container showcase">
   <h1 class="h1_social">Cсылки на соц сети:</h1>
-    <div class="button-wrapper">
+    <div >
         <ul class="button-list">
             <li><a href="https://discord.gg/qShtZWXE" class="transparent-button"  target="_blank"><i class="fab fa-discord"></i>Discord</a></li>
             <li><a href="https://t.me/endorf1in" class="transparent-button" target="_blank"><i class="fab fa-telegram"></i>Telegram</a></li>
@@ -30,6 +30,10 @@
             <li><a href="" class="transparent-button" target="_blank"><i class="fas fa-hammer"></i>Minecraft сервер</a></li>
         </ul>
     </div>
+    
 </div>
+<div class="_container button-wrapper">
+
+    </div>
 </body>
 </html>
