--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body class="body">
     <!--=========Header==============================================================================-->            
             <header >
-                <div class="header_container _container">
+                <div class=" _container">
+                    <div class="header_container">
                     <a href="https://www.tiktok.com/@endorf1in?is_from_webapp=1&sender_device=pc" class="header_logo " >
                         ENDORF1IN
                     </a> 
@@ -17,6 +18,7 @@
                     <nav >
                          <a href="https://www.tiktok.com/@endorf1in?is_from_webapp=1&sender_device=pc" class="tiktok"><i class="fab fa-tiktok"></i></a>
                     </nav>
+                    </div>
                 </div>
             </header>
       <!--=========Showcase1==============================================================================-->
@@ -32,8 +34,10 @@
     </div>
     
 </div>
-<div class="_container button-wrapper">
-
-    </div>
+<div class="_container">
+  <div class="button-wrapper">
+    <!-- нижний бордер -->
+  </div>
+</div>
 </body>
 </html>
