--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- нижний бордер -->
       </div>
   </div>
-            <li><a href="" class="transparent-button" target="_blank"><i class="fas fa-hammer"></i>Ip сервера Minecraft: endorf1in.aboba.host Версия: 1.21.4</a></li>
+            <li><a href="" class="transparent-button" target="_blank"><i class="fas fa-hammer"></i>Ip сервера (1.21.4): endorf1in.aboba.host </a></li>
         </ul>
     </div>    
 </div>
