--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="button-list">
             <li><a href="https://discord.gg/qShtZWXE" class="transparent-button"  target="_blank"><i class="fab fa-discord"></i>Discord</a></li>
             <li><a href="https://t.me/endorf1in" class="transparent-button" target="_blank"><i class="fab fa-telegram"></i>Telegram</a></li>
-            <li><a href="https://www.twitch.tv/endorf1ln" class="transparent-button" target="_blank"><i class="fab fa-twitch"></i>Twitch</a></li>
+            <li><a href="https://www.twitch.tv/endorf1ln" class="transparent-button" style="text-align: center;" target="_blank"><i class="fab fa-twitch"></i>Twitch</a></li>
             
       <div class="button-wrapper">
     <!-- нижний бордер -->
