--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <ul class="button-list">
             <li><a href="https://discord.gg/qShtZWXE" class="transparent-button"  target="_blank"><i class="fab fa-discord"></i>Discord</a></li>
             <li><a href="https://t.me/endorf1in" class="transparent-button" target="_blank"><i class="fab fa-telegram"></i>Telegram</a></li>
-            <li><a href="https://www.twitch.tv/endorf1ln" class="transparent-button" style="text-align: center;" target="_blank"><i class="fab fa-twitch"></i>Twitch</a></li>
+            <li><a href="https://www.twitch.tv/endorf1ln" class="transparent-button" " target="_blank"><i class="fab fa-twitch"></i>Twitch</a></li>
             
       <div class="button-wrapper">
     <!-- нижний бордер -->
       </div>
   </div>
-            <li><a href="endorf1in.aboba.host" class="transparent-button" target="_blank"><i class="fas fa-hammer"></i>Ip сервера (1.21.4): endorf1in.aboba.host </a></li>
+            <li><a class="transparent-button" style="text-align: center; target="_blank"><i class="fas fa-hammer"></i>Ip сервера (1.21.4): endorf1in.aboba.host </a></li>
         </ul>
     </div>    
 </div>
