--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
             <li><a href="https://discord.gg/qShtZWXE" class="transparent-button"  target="_blank"><i class="fab fa-discord"></i>Discord</a></li>
             <li><a href="https://t.me/endorf1in" class="transparent-button" target="_blank"><i class="fab fa-telegram"></i>Telegram</a></li>
             <li><a href="https://www.twitch.tv/endorf1ln" class="transparent-button"  target="_blank"><i class="fab fa-twitch"></i>Twitch</a></li>
-            
+      <div class="button-wrapper">
+    <!-- нижний бордер -->
+      </div>
+      <h1 class="h1_social">Поддержка донатом:</h1>     
+            <li><a href="https://send.monobank.ua/jar/2FmJ9FEKdw" class="transparent-button"  target="_blank">Банка Monobank</a></li>
+            <li><a href="#" class="transparent-button js-copy" data-copy="5167803315428297"><span class="copy-text">5167803315428297 (Тык что бы скопировать номер)</span></a></li> 
       <div class="button-wrapper">
     <!-- нижний бордер -->
       </div>
