--- a/mods.html
+++ b/mods.html
@@ -18,21 +18,33 @@
                     </button>               
                     <nav class="main-nav">
                          <a href="index.html">Главная</a>
-                         <a href="mods.html">Моды</a>                        
+                         <a href="mods.html">Сервер</a> 
+                         <a href="donate.html">Магазин</a>                        
                          <a href="https://www.tiktok.com/@endorf1in?is_from_webapp=1&sender_device=pc" class="tiktok"><i class="fab fa-tiktok"></i></a>
                     </nav>
                     
                 </div>
-            </header>
-      <!--=========Showcase1==============================================================================-->
+            </header>   
+<!--=========Showcase==============================================================================-->
 <div class="_container showcase">
-    <h1 class="h1_social">Рекомендованые моды сервера:</h1>   
-    </div>    
+  <h1 class="h1_social">Полезное:</h1>
+   <div class="mod-item">
+    <div class="mod-text">Онлайн карта сервера:</div>
+      <div class="mod-links">
+      <a href="http://z1.joinserver.xyz:25863" class="mods" download>Перейти</a>
+    </div>
+  </div>
+   <div class="mod-item">
+    <div class="mod-text">Магазин:</div>
+      <div class="mod-links">
+      <a href="donate.html" class="mods" download>Перейти</a>
+    </div>
+  </div>
 
-    
-<!--=========Showcase2==============================================================================-->
-<div class="_container showcase2">
 
+
+
+<h1 class="h1_social">Рекомендованые моды сервера:</h1>
   <div class="mod-item">
     <div class="mod-text">Моды сервера 1.21.4:</div>
     <div class="mod-links">
@@ -65,6 +77,7 @@
       <a href="https://minecraft-inside.ru/shaders/175399-photon.html" class="mods" download>Скачать</a>
     </div>
   </div>
+
 
   <div class="button-wrapper">
     <!-- нижний бордер -->
@@ -101,4 +114,21 @@
     });
 </script>
 </body>
+<!--=========Footer==============================================================================-->
+<footer class="footer">
+  <div class="_container footer_container">
+    <div class="footer_logo">ENDORF1IN</div>
+    <div class="footer_links">
+      <a href="index.html">Главная</a>
+      <a href="mods.html">Сервер</a>
+      <a href="donate.html">Магазин</a>  
+      <a href="https://www.tiktok.com/@endorf1in?is_from_webapp=1&sender_device=pc" target="_blank">
+        <i class="fab fa-tiktok"></i> TikTok
+      </a>
+    </div>
+    <div class="footer_copy">
+      &copy; 2025 ENDORF1IN. Все права защищены.
+    </div>
+  </div>
+</footer>
 </html>
