--- a/mods.html
+++ b/mods.html
@@ -31,13 +31,13 @@
    <div class="mod-item">
     <div class="mod-text">Онлайн карта сервера:</div>
       <div class="mod-links">
-      <a href="http://z1.joinserver.xyz:25863" class="mods" download>Перейти</a>
+      <a href="http://z1.joinserver.xyz:25863" class="mods" >Перейти</a>
     </div>
   </div>
    <div class="mod-item">
     <div class="mod-text">Магазин:</div>
       <div class="mod-links">
-      <a href="donate.html" class="mods" download>Перейти</a>
+      <a href="donate.html" class="mods" >Перейти</a>
     </div>
   </div>
 
